# FinancialReports

./: .gitignore  FUNCTION_TEST_REPORT.md  NAVIGATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README.md  USER_GUIDE.md  financial_crawler.py  main.py  pyproject.toml  requirements.txt  start_here.py  test_crawler.py  test_modules.py
archive/: HOW_TO_CRAWL.md  README.md  USAGE_GUIDE.md
config/: __init__.py  crawler_config.json  settings.py  xbrl_tags.json
data/: master_index.json  processing_tracker.db  quality_validation_report.json
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  QUICK_START.md  README.md  REFACTORING_GUIDE.md
examples/: batch_query.json  demo_master_index.py  semiconductor_batch.json  semiconductor_batch_query.json  single_query.json
output/: query_results_20250627_183128.json  query_results_20250627_183300.json  query_results_20250627_183324.json  query_results_20250627_183403.json  query_results_20250627_183447.json  query_results_20250627_183903.json  query_results_20250627_183916.json  query_results_20250627_184015.json  query_results_20250627_184020.json  query_results_20250627_184117.json  query_results_20250627_184123.json  query_results_20250627_184304.json  query_results_20250627_184312.json  query_results_20250627_184546.json  query_results_20250627_184625.json  query_results_20250627_184708.json  query_results_20250627_184720.json  query_results_20250627_185559.json  query_results_20250627_190036.json  query_results_20250627_190047.json  query_results_20250627_191807.json  query_results_20250627_191900.json  query_results_20250627_191914.json  (+4 more)
(+265 files in other folders)
